# yoshiko

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  cytoWithTerminal.sh  fullCompile.sh  simpleLoader.sh  valgrind.sh
data/: item_assignment.txt
data/test/: SilhouetteTest.jena  fusarium.txt  simple_sif_example.sif  trivial_multi_solution.sif
src/: AlmostCliqueRule.cpp  AlmostCliqueRule.h  CSVOutput.cpp  CSVOutput.h  CliqueRule.cpp  CliqueRule.h  ClusterEditingInstance.cpp  ClusterEditingInstance.h  ClusterEditingInstance.i  ClusterEditingOutput.cpp  ClusterEditingOutput.h  ClusterEditingReduction.cpp  ClusterEditingReduction.h  ClusterEditingSolutionLight.cpp  ClusterEditingSolutionLight.h  ClusterEditingSolutions.cpp  ClusterEditingSolutions.h  ClusterEditingSolutions.i  ClusterReductionInstance.cpp  ClusterReductionInstance.h  CoreAlgorithm.cpp  CoreAlgorithm.h  CoreAlgorithm.i  CplexInformer.h  CplexInformer.i  CriticalCliqueRule.cpp  CriticalCliqueRule.h  Delta.cpp  Delta.h  DynProgTable.cpp  DynProgTable.h  EdgeHeap.cpp  EdgeHeap.h  FPTReductionRule.cpp  FPTReductionRule.h  GMLOutput.cpp  GMLOutput.h  Globals.cpp  Globals.h  HeavyEdgeRule3in1.cpp  (+52 more)
src/input/: CLEVERFORMAT_OLD.old  ClusterEditingInput.cpp  ClusterEditingInput.h  JENAInput.cpp  JENAInput.h  LibraryInput.cpp  LibraryInput.h  RowSimInput.cpp  RowSimInput.h  SIFInput.cpp  SIFInput.h  StreamInput.h
src/measurement/: SilhouetteValue.cpp  SilhouetteValue.h
src/output/: CSVOutput.cpp  CSVOutput.h  ClusterEditingOutput.cpp  ClusterEditingOutput.h  GMLOutput.cpp  GMLOutput.h  MCLOutput.cpp  MCLOutput.h  NullOutput.cpp  NullOutput.h  PajekOutput.cpp  PajekOutput.h  TableAppOutput.cpp  TableAppOutput.h  TableOutput.cpp  TableOutput.h  TransClustOutput.cpp  TransClustOutput.h  XGMMLOutput.cpp  XGMMLOutput.h
src/reductionRules/: AlmostCliqueRule.cpp  AlmostCliqueRule.h  CliqueRule.cpp  CliqueRule.h  CriticalCliqueRule.cpp  CriticalCliqueRule.h  FPTReductionRule.cpp  FPTReductionRule.h  HeavyEdgeRule3in1.cpp  HeavyEdgeRule3in1.h  MergingRule.cpp  MergingRule.h  ParameterDependentReductionRule.cpp  ParameterDependentReductionRule.h  SimilarNeighboorhoodRule.cpp  SimilarNeighborhoodRule.cpp  SimilarNeighborhoodRule.h
src/test/: runAllTests.cpp  verifyExamples.cpp
